2008-09-17  Robert Jordan  <robertj@gmx.net>>

	* ObjectReader.cs (ReadTypeMetadata): Replace the check for
	ISerializable with something less `reflective'.
	Fixes #421664.

2008-06-27  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* BinaryFormatter.cs: Fix parameter name

2008-04-26  Jb Evain  <jbevain@novell.com>

	* CodeGenerator.cs: replace usage of new Type [0] by
	Type.EmptyTypes. Found with Gendarme.

2008-04-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* BinaryFormatter.cs: Fix parameter names

2007-08-25  Robert Jordan  <robertj@gmx.net>

	* ObjectReader.cs, ObjectWriter.cs, CodeGenerator.cs:
	Use DateTime.From/ToBinary. Fixes #82400.

2007-08-25  Alan McGovern  <amcgovern@novell.com>

	* ObjectReader.cs, ObjectWriter.cs, CodeGenerator.cs:
	Reverted fix for #82400.

2007-08-25  Robert Jordan  <robertj@gmx.net>

	* ObjectReader.cs, ObjectWriter.cs, CodeGenerator.cs:
	Use DateTime.From/ToBinary. Fixes #82400.

2007-08-23  Robert Jordan  <robertj@gmx.net>

	* ObjectReader.cs, ObjectReader.cs: Map between System.MonoType[] and
	MS.NET's System.RuntimeType[].
	
	* ObjectReader.cs (ReadType): When a type couldn't be found, emit
	a more useful exception.

2007-05-03  Dick Porter  <dick@ximian.com>

	* BinaryFormatter.cs: Update to 2.0 profile

2006-12-25  Robert Jordan  <robertj@gmx.net>

	* binary_serialization_format.htm: Update the NET_2_0 format.
	* BinaryCommon.cs: MethodFlags is actually an int32. Add NET_2_0 flags.
	* MessageFormatter.cs: Add support for generic method arguments.
	* ObjectWriter.cs, ObjectReader.cs: Map between System.MonoType and
	MS.NET's System.RuntimeType.

2006-12-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MessageFormatter.cs: Include the logical context in the message when
	  throwing an exception. Fixes a compatibility issue with MS.NET.

2006-10-29  Robert Jordan  <robertj@gmx.net>

	* ObjectWriter.cs, ObjectReader [NET_2_0]:
	Use the SerializationObjectManager.

2006-09-05  Raja R Harinath  <rharinath@novell.com>
